src/components/Interests.css
.hobby-container {
    border-top: black solid 5px;
    background: #313131;;
    height: 110vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 4rem;
    justify-content: center;
}

.hobby-container > h1 {
    /* margin-top: 30px; */
    color: #fff;
    text-align: center;
    /* padding-right: 500px; */
}

#interests {
    scroll-margin-top: 80px;
}

.drawing-gallery {
    margin: 20px;
    margin-top: 40px;
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: center;
    /* align-items: center; */
    /* text-align: center; */
    height: 100vh;
    /* background-color: transparent; */
    overflow: hidden;
}

.image-container {
    display: flex;
    /* flex: 1; */
    width: 100%;
    height: 75vh;
    /* transition: transform 0.7s; */
    align-content: center;
    /* align-items: center; */
    flex-direction: row;
    justify-content: center;
    /* -webkit-column-count: 3;
    -moz-column-count: 3; 
    column-count: 3; */
    /* column-width: 33%; */
}

.image-container > img {
    position: relative;
    /* flex-direction: column; */
    object-fit: cover;
    width: 350px;
    height: auto;
    display: block;
    flex: auto;
    justify-content: center;
    /* align-items: center; */
    flex-direction: row;
    /* box-shadow: 0 6px 20px rgba(255, 255, 255, 0.3);
    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017)); */
    margin: 7px;
    border-radius: 10px;
}

.image-container img:hover {
    filter: brightness(0.95);
    border: 5px solid #fff;
    transition: all 150ms ease-in;
    /* cursor: pointer; */
}

